--- a/html/ex1.html
+++ b/html/ex1.html
@@ -12,6 +12,10 @@
       <label for="house">House</label>:
       <select name="house" id="house">
           <option value="" selected>Select a house</option>
+          <option value="ST" selected>Stark</option>
+          <option value="LA" selected>Lannister</option>
+          <option value="BA" selected>Baratheon</option>
+          <option value="TA" selected>Targaryen</option>
       </select>
     </form>
     <p>
