--- a/html/ex2.html
+++ b/html/ex2.html
@@ -7,6 +7,24 @@
     <title>Exercise 2</title>
 </head>
 <body>
+    <label for="country">Enter a country name</label>:
+    <input type="text" id="country" onkeyup="autoComplete(this.value)">
+    <div id="suggestions">
+        <option value="Delhi"></option>
+        <option value="Ahemdabad"></option>
+        <option value="Punjab"></option>
+        <option value="Uttar Pradesh"></option>
+        <option value="Himachal Pradesh"></option>
+        <option value="Karnatka"></option>
+        <option value="Kerela"></option>
+        <option value="Maharashtra"></option>
+        <option value="Gujrat"></option>
+        <option value="Rajasthan"></option>
+        <option value="Bihar"></option>
+        <option value="Tamil Nadu"></option>
+        <option value="Haryana"></option>
+    </div>
+
     <script src="../js/ex2.js"></script>
 </body>
 </html>
